Fixed scrolling, and added scrollbar styles

--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -11,6 +11,7 @@
         text-align: center;
         box-sizing: border-box;
         transition: 0.3s ease;
+        overflow-y: auto;
         z-index: 1;
 
         #sidebardp {
