--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -20,6 +20,8 @@ $lighttext: #202020;
 $darkertext: #dadada;
 $lightertext: #303030;
 
+$middark: #606060;
+
 $darklinktext: #60c0e0;
 $lightlinktext: #3080a0;
 
